<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:id="@+id/customLayout"
    app:cardElevation="10dp"

    app:cardCornerRadius="30dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_gravity="center"
        android:background="#FBEEC4">



    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/correct"
        android:src="@drawable/tick"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/notificationHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congratulations"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="#36973A"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/work"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textAlignment="center"
        android:background="#F0DFA6"
        android:padding="10dp"
        android:id="@+id/notificationMessage"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/happyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/happy"
            android:textStyle="bold"
            android:textSize="25sp"
            android:padding="15dp"
            android:backgroundTint="#6AED6F"
            android:layout_marginStart="20dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/doubtButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doubt"
            android:textStyle="bold"
            android:textSize="23sp"
            android:padding="15dp"
            android:backgroundTint="#BA816F"
            android:layout_marginStart="50dp"/>

    </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>